# reddit-pain-radar

./: .env.example  .gitignore  README.md  pyproject.toml
.github/workflows/: ci.yml
conductor/: tracks.md
conductor/archive/unit_tests_20251221/: metadata.json  spec.md
conductor/tracks/adaptive_researcher_20251222/: metadata.json  plan.md  spec.md
conductor/tracks/ci_precommit_20251222/: plan.md
conductor/tracks/local_verification_20251221/: metadata.json  plan.md  spec.md
conductor/tracks/unit_tests_20251221/: plan.md
conductor/tracks/verify_ci_20251222/: plan.md
docs/api/: openapi.yaml
examples/: PRD.md  demo.tape
reports/: idea_report_1_20251216_131244.md
scripts/: test_reddit_tools.py
src/idea_miner/: __init__.py  __main__.py  analyze.py  cli.py  config.py  dedupe.py  extract_async.py  logging_config.py  models.py  pipeline.py  prompts.py  reddit_async.py  report.py  score_async.py  store.py
src/idea_miner/cli/: report.py
src/pain_radar/: analyze.py  cluster.py  config.py  dedupe.py  digest.py  extract_async.py  http_client.py  models.py  pipeline.py  presets.py  progress.py  reddit_async.py  report.py  retry_policy.py  score_async.py  web_app.py
src/pain_radar/agent/: models.py  tools.py
src/pain_radar/api/: __init__.py
src/pain_radar/api/v1/: __init__.py
src/pain_radar/api/web/: __init__.py
src/pain_radar/cli/: __init__.py  alerts.py  cluster.py  db.py  fetch.py  ideas.py  pipeline.py  report.py  sources.py  web.py
src/pain_radar/store/: core.py  schema.py  schema_saas.py
src/pain_radar/workers/: __init__.py
tests/: conftest.py  test_agent_models.py  test_agent_tools.py  test_analyze.py  test_async_llm.py  test_cli.py  test_cluster.py  test_digest.py  test_integration_cli.py  test_pipeline.py  test_reddit_async.py  test_report.py  test_store.py  test_web_app.py
